--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <p class="card-text" id="plain_text"></p>
         </div>
     </div>
+    <div id="snackbar">Keyword Invalid!</div>
     <script src="main.js"></script>
-
 </body>
 </html>
